test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_23.k
schema Person:
    name: str
    temp: str

    _temp = None
    temp = _temp

    _name = 123
    name = _name
